✨  Add route for student note
